# WordComplete

./: .gitignore  CMakeLists.txt  main.cpp
backend/: Dockerfile  docker-compose.yml  main.py
backend/resources/: decode_table.txt
include/: Huffman.h  autocomplete.h  utf8.h  vn_lang_tool.h  word_complete.h
include/huffman/: Huffman.h  HuffmanTreeNode.h
include/trie/: node.h  trie.h
resources/: decode_table.txt
